--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-URI = mongodb://127.0.0.1:27017/crudapp
+URI = mongodb+srv://tushar:tushar@cluster0.ysi5zdc.mongodb.net/crudapp?retryWrites=true&w=majority&appName=Cluster0
