--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,9 +2,10 @@
    "version": 2,
    "name": "music-album",
    "builds": [
-      { "src": "app.js", "use": "@vercel/node" }
+     { "src": "server.js", "use": "@vercel/node" }
    ],
    "routes": [
-      { "src": "/(.*)", "dest": "/app.js" }
+     { "src": "/(.*)", "dest": "/server.js" }
    ]
-}
+ }
+ 
