--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -5,7 +5,7 @@
      { "src": "server.js", "use": "@vercel/node" }
    ],
    "routes": [
-     { "src": "/(.*)", "dest": "/server.js" }
+     { "src": "/routes/userRoute.js", "dest": "/server.js" }
    ]
  }
  
